--- a/Code/OrganizationOfData.DesktopClient/Views/NewFileWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/NewFileWindow.xaml
@@ -17,6 +17,7 @@
         TextOptions.TextRenderingMode="Auto"
         Background="Transparent"
         FontFamily="{DynamicResource MaterialDesignFont}"
+        Name="NewFileWindowName"
         Title="Nova datoteka" Height="450" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="None" AllowsTransparency="True">
     <Window.Resources>
         <ResourceDictionary>
@@ -34,6 +35,16 @@
             </ObjectDataProvider>
         </ResourceDictionary>
     </Window.Resources>
+
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="Loaded">
+            <BeginStoryboard>
+                <Storyboard Duration="00:00:00.5" Storyboard.TargetProperty="Opacity">
+                    <DoubleAnimation From="0" To="1" Duration="00:00:00.5"/>
+                </Storyboard>
+            </BeginStoryboard>
+        </EventTrigger>
+    </Window.Triggers>
 
     <Border BorderThickness="0" CornerRadius="10" Background="White">
         <Grid>
