--- a/Code/OrganizationOfData.DesktopClient/Views/AuthorsWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/AuthorsWindow.xaml
@@ -15,7 +15,7 @@
         TextOptions.TextRenderingMode="Auto"
         Background="Transparent"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="Autori" Height="400" Width="850" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="None" AllowsTransparency="True">
+        Title="Autori" Height="300" Width="600" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="None" AllowsTransparency="True">
     <Window.Triggers>
         <EventTrigger RoutedEvent="Loaded">
             <BeginStoryboard>
@@ -28,7 +28,40 @@
     
     <Border BorderThickness="0" CornerRadius="10" Background="White">
         <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
+            <materialDesign:Card Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Margin="15" Padding="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+
+                <StackPanel Margin="10" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <materialDesign:PackIcon Kind="AccountCircle" Width="25" Height="25" Margin="0 0 5 0" />
+                    <TextBlock VerticalAlignment="Center" FontSize="24" Style="{StaticResource MaterialDesignDisplay1TextBlock}">
+                    Authors
+                    </TextBlock>
+                </StackPanel>
+            </materialDesign:Card>
+
+            <materialDesign:Chip IsEnabled="False" Grid.Row="1" Margin="15 0 0 0" Content="Milan Pavlov SW35/2017">
+                <materialDesign:Chip.Icon>
+                    <Image Source="pack://application:,,,/Resources/Mikec.jpg" />
+                </materialDesign:Chip.Icon>
+            </materialDesign:Chip>
+
+            <materialDesign:Chip IsEnabled="False" Grid.Row="2" Margin="15 0 0 0" Content="Petar Cerović SW26/2017">
+                <materialDesign:Chip.Icon>
+                    <Image Source="pack://application:,,,/Resources/peca.jpg" />
+                </materialDesign:Chip.Icon>
+            </materialDesign:Chip>
+
+            <Button Grid.Row="4" Grid.Column="0" Width="100" Height="30" Command="{Binding CloseCommand}" Content="Zatvori" FontSize="12" VerticalAlignment="Center" HorizontalAlignment="Center" Style="{StaticResource MaterialDesignRaisedAccentButton}" />
         </Grid>
     </Border>
 </Window>
