--- a/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
@@ -21,19 +21,9 @@
             <local:BucketControl />
         </DataTemplate>
     </Window.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="5*"/>
-        </Grid.RowDefinitions>
+    <DockPanel LastChildFill="True">
 
-        <Menu IsMainMenu="True" Margin="5">
+        <Menu IsMainMenu="True" Margin="5" DockPanel.Dock="Top">
             <MenuItem Header="_Datoteka" Icon="{materialDesign:PackIcon Kind=File}">
                 <MenuItem Header="_Nova" Icon="{materialDesign:PackIcon Kind=FilePlus}" Command="{Binding OpenNewFileWindowCommand}" />
                 <MenuItem Header="_Učitaj" Icon="{materialDesign:PackIcon Kind=FileDownload}" Command="{Binding OpenFileCommand}"/>
@@ -47,33 +37,11 @@
             </MenuItem>
         </Menu>
 
-        <GroupBox Header="Podaci o datoteci" Style="{DynamicResource MaterialDesignGroupBox}" materialDesign:ColorZoneAssist.Mode="Accent" Margin="10" Grid.Row="1" Grid.Column="0" materialDesign:ShadowAssist.ShadowDepth="Depth3" BorderThickness="2">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="192*" />
-                    <ColumnDefinition Width="491*"/>
-                </Grid.ColumnDefinitions>
+        <!--<Image Grid.Column="1" Grid.Row="0" Grid.RowSpan="1" Source="pack://application:,,,/Resources/ftn.png" Margin="5" />-->
 
-                <Label Grid.Row="0"  Content="Tip datoteke:" VerticalAlignment="Center"  />
-                <Label Grid.Row="1"  Content="Faktor baketiranja:"  VerticalAlignment="Center" />
-                <Label Grid.Row="2"  Content="Broj blokova:"  VerticalAlignment="Center" />
-                <Label Grid.Row="0"  Grid.Column="1" Content="{Binding}"  VerticalAlignment="Center" Grid.ColumnSpan="2" />
-                <Label Grid.Row="1"  Grid.Column="1" Content="{Binding BulkFile.Factor}"  VerticalAlignment="Center" Grid.ColumnSpan="2" />
-                <Label Grid.Row="2"  Grid.Column="1" Content="{Binding BulkFile.NumberOfBuckets}" VerticalAlignment="Center" Grid.ColumnSpan="2" />
-            </Grid>
-        </GroupBox>
-
-        <Image Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" Source="pack://application:,,,/Resources/ftn.png" Margin="5" />
-
-        <materialDesign:ColorZone Mode="PrimaryMid" Padding="5" Grid.Row="2" Grid.ColumnSpan="2" Margin="10" materialDesign:ShadowAssist.ShadowDepth="Depth2">
-            <StackPanel Orientation="Horizontal">
-                <Button Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowNewRecordDialogCommand}">
+        <materialDesign:ColorZone Mode="PrimaryMid" Padding="5" DockPanel.Dock="Top" Margin="10 5 10 10" materialDesign:ShadowAssist.ShadowDepth="Depth2">
+            <DockPanel LastChildFill="False">
+                <Button DockPanel.Dock="Left" Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowNewRecordDialogCommand}">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Add" />
                         <TextBlock Margin="10 0 0 0">
@@ -81,12 +49,12 @@
                         </TextBlock>
                     </StackPanel>
                 </Button>
-                <Separator Background="{DynamicResource MaterialDesignBody}">
+                <Separator DockPanel.Dock="Left" Background="{DynamicResource MaterialDesignBody}">
                     <Separator.LayoutTransform>
                         <RotateTransform Angle="90" />
                     </Separator.LayoutTransform>
                 </Separator>
-                <Button Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowFindRecordRecordDialogCommand}">
+                <Button DockPanel.Dock="Left" Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowFindRecordRecordDialogCommand}">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Search" />
                         <TextBlock Margin="10 0 0 0">
@@ -94,12 +62,12 @@
                         </TextBlock>
                     </StackPanel>
                 </Button>
-                <Separator Background="{DynamicResource MaterialDesignBody}" Visibility="Collapsed">
+                <Separator DockPanel.Dock="Left" Background="{DynamicResource MaterialDesignBody}" Visibility="Collapsed">
                     <Separator.LayoutTransform>
                         <RotateTransform Angle="90" />
                     </Separator.LayoutTransform>
                 </Separator>
-                <Button Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowScalesCommand}" Visibility="Collapsed">
+                <Button DockPanel.Dock="Left" Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowScalesCommand}" Visibility="Collapsed">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Edit" />
                         <TextBlock Margin="10 0 0 0">
@@ -107,12 +75,12 @@
                         </TextBlock>
                     </StackPanel>
                 </Button>
-                <Separator Background="{DynamicResource MaterialDesignBody}">
+                <Separator DockPanel.Dock="Left" Background="{DynamicResource MaterialDesignBody}">
                     <Separator.LayoutTransform>
                         <RotateTransform Angle="90" />
                     </Separator.LayoutTransform>
                 </Separator>
-                <Button Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowDeleteRecordRecordDialogCommand}">
+                <Button DockPanel.Dock="Left" Style="{StaticResource MaterialDesignToolForegroundButton}" Width="Auto" Height="Auto" Margin="10 3 10 3" Command="{Binding ShowDeleteRecordRecordDialogCommand}">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Delete" />
                         <TextBlock Margin="10 0 0 0">
@@ -120,59 +88,85 @@
                         </TextBlock>
                     </StackPanel>
                 </Button>
-            </StackPanel>
+            </DockPanel>
         </materialDesign:ColorZone>
-
-        <ScrollViewer Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto">
+    
+        <ScrollViewer DockPanel.Dock="Top" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto">
             <Grid Margin="5">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="192*" />
-                    <RowDefinition Height="31*" />
-                    <RowDefinition Height="160*"/>
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueDarkBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Padding="10" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                        <local:PrimaryZoneControl DataContext="{Binding PrimaryZoneControlViewModel}" />
-                    </ScrollViewer>
-                </materialDesign:Card>
-
                 <GroupBox Header="Memorija" Style="{DynamicResource MaterialDesignGroupBox}" Margin="5" Grid.Row="1" Grid.Column="1" materialDesign:ShadowAssist.ShadowDepth="Depth3" BorderThickness="2" Grid.RowSpan="2">
-                    <ScrollViewer HorizontalScrollBarVisibility="Auto" Grid.Row="1" Grid.Column="1" VerticalScrollBarVisibility="Hidden">
-                        <local:BucketControl DataContext="{Binding BucketControlViewModel}" Margin="0 0 0 10" />
-                    </ScrollViewer>
                 </GroupBox>
 
-                <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Padding="10" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.RowSpan="2">
-                    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                        <local:OverrunZoneControl DataContext="{Binding OverrunZoneControlViewModel}" />
-                    </ScrollViewer>
-                </materialDesign:Card>
+                <StackPanel Grid.Column="0">
+                    <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Margin="5" Padding="10">
+                        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                            <local:PrimaryZoneControl DataContext="{Binding PrimaryZoneControlViewModel}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </ScrollViewer>
+                    </materialDesign:Card>
 
-                <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueDarkBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Grid.Row="0" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="0*"/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <TextBlock Padding="8" FontSize="20" Text="{Binding NextStepMessage}" Grid.ColumnSpan="2"/>
-                        <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" Command="{Binding NextStepCommand}" HorizontalAlignment="Right" Margin="0 0 10 10" Grid.Row="1" Grid.ColumnSpan="2">
-                            Sledeći korak
-                        </Button>
-                    </Grid>
-                </materialDesign:Card>
+                    <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Padding="10" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.RowSpan="2">
+                        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                            <local:OverrunZoneControl DataContext="{Binding OverrunZoneControlViewModel}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </ScrollViewer>
+                    </materialDesign:Card>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1">
+                    <GroupBox Header="Memorija" Style="{DynamicResource MaterialDesignGroupBox}" Margin="5" Grid.Row="1" Grid.Column="1" materialDesign:ShadowAssist.ShadowDepth="Depth3" BorderThickness="2" Grid.RowSpan="2">
+                        <ScrollViewer HorizontalScrollBarVisibility="Auto" Grid.Row="1" Grid.Column="1" VerticalScrollBarVisibility="Hidden">
+                            <local:BucketControl DataContext="{Binding BucketControlViewModel}" Margin="0 0 0 10" />
+                        </ScrollViewer>
+                    </GroupBox>
+
+                    <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueDarkBrush}" Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}" Margin="5" Grid.Row="0" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0*"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <TextBlock Padding="8" FontSize="20" Text="{Binding NextStepMessage}" Grid.ColumnSpan="2"/>
+                            <Button Style="{StaticResource MaterialDesignRaisedAccentButton}" Command="{Binding NextStepCommand}" HorizontalAlignment="Right" Margin="0 0 10 10" Grid.Row="1" Grid.ColumnSpan="2">
+                                Sledeći korak
+                            </Button>
+                        </Grid>
+                    </materialDesign:Card>
+
+                    <Expander Background="{DynamicResource SecondaryAccentBrush}" Header="Informacije o datoteci" Margin="5">
+                        <Border BorderThickness="3 0 3 3" BorderBrush="{DynamicResource SecondaryAccentBrush}">
+                            <DockPanel Background="{DynamicResource PrimaryHueMidBrush}">
+                                <Grid Margin="10">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="*" />
+                                        <RowDefinition Height="*" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <Label FontFamily="{DynamicResource MaterialDesignFont}" Foreground="{DynamicResource MaterialDesignPaper}" FontWeight="Bold" Content="Tip datoteke:" VerticalAlignment="Center"  />
+                                    <Label Grid.Column="1" FontFamily="{DynamicResource MaterialDesignFont}" Foreground="{DynamicResource MaterialDesignPaper}" Content="{Binding}"  VerticalAlignment="Center" Grid.ColumnSpan="2" />
+
+                                    <Label Grid.Row="1" FontFamily="{DynamicResource MaterialDesignFont}" Foreground="{DynamicResource MaterialDesignPaper}" FontWeight="Bold" Content="Faktor baketiranja:" VerticalAlignment="Center" />
+                                    <Label Grid.Row="1" Grid.Column="1" FontFamily="{DynamicResource MaterialDesignFont}" Foreground="{DynamicResource MaterialDesignPaper}" Content="{Binding BulkFile.NumberOfBuckets}" VerticalAlignment="Center" Grid.ColumnSpan="2" />
+
+                                    <Label Grid.Row="2" FontFamily="{DynamicResource MaterialDesignFont}" Foreground="{DynamicResource MaterialDesignPaper}" FontWeight="Bold" Content="Broj blokova:"  VerticalAlignment="Center" />
+                                    <Label Grid.Row="2" Grid.Column="1" FontFamily="{DynamicResource MaterialDesignFont}" Foreground="{DynamicResource MaterialDesignPaper}" Content="{Binding BulkFile.Factor}"  VerticalAlignment="Center" Grid.ColumnSpan="2" />
+                                </Grid>
+                            </DockPanel>
+                        </Border>
+                    </Expander>
+                </StackPanel>
             </Grid>
         </ScrollViewer>
-
-        <materialDesign:Snackbar Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" MessageQueue="{Binding Messages}" />
-    </Grid>
+    </DockPanel>
 </Window>
