--- a/Code/OrganizationOfData.DesktopClient/Views/PrimaryZoneControl.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/PrimaryZoneControl.xaml
@@ -21,5 +21,14 @@
             <local:BucketControl />
         </DataTemplate>
     </UserControl.Resources>
-    <ItemsControl ItemsSource="{Binding BucketControlViewModels}" ItemTemplate="{StaticResource BucketControl}" />
+    <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Foreground="{DynamicResource MaterialDesignPaper}" Margin="5" Padding="10">
+        <StackPanel>
+            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}">
+                Primarna zona
+            </TextBlock>
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                <ItemsControl ItemsSource="{Binding BucketControlViewModels}" ItemTemplate="{StaticResource BucketControl}" />
+            </ScrollViewer>
+        </StackPanel>
+    </materialDesign:Card>
 </UserControl>
