--- a/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/MainWindow.xaml
@@ -110,7 +110,7 @@
                 <StackPanel Grid.Column="1">
                     <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Foreground="{DynamicResource MaterialDesignPaper}" Margin="5" Padding="10">
                         <StackPanel>
-                            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}">
+                            <TextBlock FontSize="20">
                                 Memorija
                             </TextBlock>
                             <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
