--- a/Code/OrganizationOfData.DesktopClient/Views/PrimaryZoneControl.xaml
+++ b/Code/OrganizationOfData.DesktopClient/Views/PrimaryZoneControl.xaml
@@ -23,7 +23,7 @@
     </UserControl.Resources>
     <materialDesign:Card materialDesign:ShadowAssist.ShadowDepth="Depth3" Background="{DynamicResource PrimaryHueMidBrush}" Foreground="{DynamicResource MaterialDesignPaper}" Margin="5" Padding="10">
         <StackPanel>
-            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}">
+            <TextBlock FontSize="20">
                 Primarna zona
             </TextBlock>
             <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
